fix: make right-side-overflowing code blocks scrollable

--- a/cmd/server/static/styles.css
+++ b/cmd/server/static/styles.css
@@ -101,6 +101,10 @@ li {
     color: var(--gorgeous-contrast-7);
 }
 
+pre {
+    overflow-x: auto;
+}
+
 pre, code {
     color: var(--gorgeous-contrast-6);
 }
